tests/field/set_on_float.rev
(12.34).bar = true // error: only structure instances have properties